<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textSize="30sp"
        android:textColor="@color/tim"
        android:textStyle="bold"
        android:background="@color/xanhnhat"
        android:gravity="end|bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bgrLinner"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtn"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:backgroundTint="@color/colorBtn"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:backgroundTint="@color/colorBtn"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/_Divide"
            android:backgroundTint="@color/colorBtn"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bgrLinner"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtn"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:backgroundTint="@color/colorBtn"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:backgroundTint="@color/colorBtn"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnMulti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_Multi"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtn"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bgrLinner"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:layout_margin="5dp"

            android:backgroundTint="@color/colorBtn"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:backgroundTint="@color/colorBtn"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:backgroundTint="@color/colorBtn"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_Minus"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtn"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bgrLinner"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:backgroundTint="@color/colorBtn"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_dot"
            android:backgroundTint="@color/colorBtn"
            android:onClick="onDecimalPointer"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_clr"
            android:backgroundTint="@color/colorBtn"
            android:layout_margin="5dp"
            android:onClick="onClear"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_plus"
            android:backgroundTint="@color/colorBtn"
            android:layout_margin="5dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bgrLinner"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/_equal"
            android:backgroundTint="@color/colorBtn"
            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml"
            />
    </LinearLayout>

</LinearLayout>